Fixed panel styling wrapping issue

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -13,7 +13,8 @@
   left: 10px;
   border-radius: 5px;
   background-color: #222222B6;
-  width: auto;
+  width: max-content;
+  max-width: 75vw;
   max-height: 20%;
   overflow-y: auto;
   padding: 8px 0px 8px 0px;
@@ -39,6 +40,7 @@
 
 .truck-panel_item {
   display: flex;
+  flex-wrap: nowrap;
   gap: 5px;
   align-items: center;
   padding: 5px;
